--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.10.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
+    "openai": "^4.56.0",
     "sequelize": "^6.37.3"
   }
 }
