--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^2.8.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,7 +21,6 @@
     "mysql2": "^3.10.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
-    "openai": "^4.56.0",
     "sequelize": "^6.37.3"
   }
 }
