--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,10 +20,10 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_ROOT_PASSWORD: ${PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DATABASE}
-      MYSQL_USER: ${USER}
-      MYSQL_PASSWORD: ${PASSWORD}
+      # MYSQL_USER: ${USER}
+      # MYSQL_PASSWORD: ${PASSWORD}
     ports:
       - "${PORT_DATABASE}:${PORT_DATABASE}"
     volumes:
