--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,7 +20,7 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
       MYSQL_DATABASE: ${DATABASE}
       # MYSQL_USER: ${USER}
       # MYSQL_PASSWORD: ${PASSWORD}
