--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   backend:
     build: .
@@ -12,22 +13,26 @@ services:
       - PORT_SERVER=${PORT_SERVER}
       - FRONTEND_URL=${FRONTEND_URL}
     depends_on:
-      - db
+      db:
+        condition: service_healthy  # Ensure MySQL is ready before starting the backend
     volumes:
-      - .:/app
-    command: npm start
+      - .:/usr/src/app
+    command: ["./wait-for-it.sh", "db:${PORT_DATABASE}", "--", "npm", "start"]  # Wait for DB to be ready
 
   db:
     image: mysql:8
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
       MYSQL_DATABASE: ${DATABASE}
-      # MYSQL_USER: ${USER}
-      # MYSQL_PASSWORD: ${PASSWORD}
     ports:
-      - "${PORT_DATABASE}:${PORT_DATABASE}"
+      - "${PORT_DATABASE}:3306"  # 3306 is the default MySQL port, make sure it's consistent
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5  # This healthcheck ensures MySQL is ready before backend starts
 
 volumes:
   db_data:
