fixing wait-for-it.sh again and again

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 
-# Install nodemon globally (if not already installed)
+# Install nodemon globally
 RUN npm install -g nodemon
 
 # Copy the rest of your application code
@@ -15,10 +15,15 @@ COPY . .
 
 # Download wait-for-it script to wait for MySQL
 ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh /usr/src/app/wait-for-it.sh
+
+# Ensure the script is executable
 RUN chmod +x /usr/src/app/wait-for-it.sh
 
 # Expose the application port
 EXPOSE ${PORT_SERVER}
 
-# Start the application with wait-for-it
+# Debug: Check if wait-for-it.sh exists
+RUN ls -la /usr/src/app/wait-for-it.sh
+
+# Start the application using wait-for-it
 CMD ["./wait-for-it.sh", "db:${PORT_DATABASE}", "--timeout=30", "--strict", "--", "npm", "start"]
