fixing wait-for-it.sh by refrencing it as sh command in CMD in docker-compose.yml

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         condition: service_healthy  # Ensure MySQL is ready before starting the backend
     volumes:
       - .:/usr/src/app
-    command: ["./wait-for-it.sh", "db:${PORT_DATABASE}", "--", "npm", "start"]  # Wait for DB to be ready
+    command: ["sh","./wait-for-it.sh", "db:${PORT_DATABASE}", "--", "npm", "start"]  # Wait for DB to be ready
 
   db:
     image: mysql:8
