--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       db:
         condition: service_healthy  # Ensure MySQL is ready before starting the backend
     volumes:
-      - .:/usr/src/app
-    command: ["sh","./wait-for-it.sh", "db:${PORT_DATABASE}", "--", "npm", "start"]  # Wait for DB to be ready
+      - .:/usr/src/app  # Mount the local directory to the container
+    command: ["sh", "./wait-for-it.sh", "db:${PORT_DATABASE}", "--", "npm", "start"]  # Wait for DB to be ready
 
   db:
     image: mysql:8
