--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+      MYSQL_ROOT_PASSWORD: ${PASSWORD}
       MYSQL_DATABASE: ${DATABASE}
     ports:
       - "${PORT_DATABASE}:3306"  # 3306 is the default MySQL port, make sure it's consistent
