--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
-HOST = ''
-USER = ''
-PASSWORD = ''
-DATABASE = ''
-PORT_DATABASE = ''
-PORT_SERVER = ''
-JWT_SECRET = ''
-FRONTEND_URL = ''
+HOST=
+USER=
+PASSWORD=
+DATABASE=
+PORT_DATABASE=
+PORT_SERVER=
+JWT_SECRET=
+FRONTEND_URL=
 HUGGINGFACE_API_KEY=
