--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - DATABASE=${DATABASE}
       - PORT_DATABASE=${PORT_DATABASE}
       - PORT_SERVER=${PORT_SERVER}
+      - PORT_NGINX_HTTP=${PORT_NGINX_HTTP}
+      - PORT_NGINX_HTTPS=${PORT_NGINX_HTTPS}
       - FRONTEND_URL=${FRONTEND_URL}
     depends_on:
       db:
@@ -25,7 +27,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${PASSWORD}
       MYSQL_DATABASE: ${DATABASE}
     ports:
-      - "${PORT_DATABASE}:3306"  # 3306 is the default MySQL port, make sure it's consistent
+      - "${PORT_DATABASE}:${PORT_DATABASE}"
     volumes:
       - db_data:/var/lib/mysql
     healthcheck:
@@ -33,6 +35,18 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5  # This healthcheck ensures MySQL is ready before backend starts
+
+  nginx:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    ports:
+      - "${PORT_NGINX_HTTP}:${PORT_NGINX_HTTP}"     # HTTP
+      - "${PORT_NGINX_HTTPS}:${PORT_NGINX_HTTPS}"   # HTTPS
+    volumes:
+      - ./certs:/etc/letsencrypt
+    depends_on:
+      - backend    
 
 volumes:
   db_data:
