--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -1,31 +1,26 @@
 server {
     listen 80;
-    server_name <YOUR_ELASTIC_IP>;
-
-    location / {
-        proxy_pass http://backend:5000;  # Point to your backend container
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Redirect all HTTP traffic to HTTPS
+    server_name skill-planne-rbackend.duckdns.org;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name 18.117.48.129;
+    server_name skill-planne-rbackend.duckdns.org;
 
-    ssl_certificate /etc/letsencrypt/live/18.117.48.129/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/18.117.48.129/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/skill-planne-rbackend.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/skill-planne-rbackend.duckdns.org/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://backend:5000;  # Forward HTTPS requests to backend
+        proxy_pass http://backend:5000;  # Reference the backend service in Docker Compose
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 }
+
