--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name skill-planne-rbackend.duckdns.org;
+    server_name skill-planner-backend.duckdns.org;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name skill-planne-rbackend.duckdns.org;
+    server_name skill-planner-backend.duckdns.org;
 
-    ssl_certificate /etc/letsencrypt/live/skill-planne-rbackend.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/skill-planne-rbackend.duckdns.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/skill-planner-backend.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/skill-planner-backend.duckdns.org/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
@@ -23,4 +23,3 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
-
