--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -15,7 +15,7 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://backend:5000;  # Reference the backend service in Docker Compose
+        proxy_pass http://backend-backend-1:5000;  # Reference the backend service in Docker Compose
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
