--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -1,25 +1,46 @@
-server {
-    listen 80;
-    server_name skill-planner-backend.duckdns.org;
-    return 301 https://$host$request_uri;
+# This is the main configuration context
+worker_processes auto;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name skill-planner-backend.duckdns.org;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/skill-planner-backend.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/skill-planner-backend.duckdns.org/privkey.pem;
+    # This is where your server blocks go
+    server {
+        listen 80;
+        server_name skill-planner-backend.duckdns.org;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+        location / {
+            proxy_pass http://backend-backend-1:5000;  # Update this to match your backend service name and port
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 
-    location / {
-        proxy_pass http://backend-backend-1:5000;  # Reference the backend service in Docker Compose
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    server {
+        listen 443 ssl;
+        server_name skill-planner-backend.duckdns.org;
+
+        ssl_certificate /etc/letsencrypt/live/skill-planner-backend.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/skill-planner-backend.duckdns.org/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://backend-backend-1:5000;  # Update this to match your backend service name and port
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
