--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
-    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
